# cookiecutter-krabby-patty

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml  tox.ini
hooks/: post_gen_project.py
{{ cookiecutter.project_short_name }}/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
{{ cookiecutter.project_short_name }}/.github/workflows/: build.yml  docs.yml  format.yml  lint.yml  package.yml  rust.yml  tests.yml
{{ cookiecutter.project_slug }}/: Cargo.toml  LICENSE
{{ cookiecutter.project_slug.replace('_', '-') }}/: Cargo.toml  LICENSE  README.md  release.config.js
{{ cookiecutter.project_slug.replace('_', '-') }}/.github/workflows/: build.yml  format.yml  lint.yml  package.yml  pr_title_check.yml  release.yml  tests.yml
