[tool.poetry]
name = "cookiecutter-krabby-patty"
version = "0.1.0"
description = "A Rust cookiecutter template"
authors = ["Jan Bronicki <janbronicki@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
tox = "^3.24.5"
pytest = "^7.0.1"
cookiecutter = "^1.7.3"
twine = "^3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
