[package]
name = "{{ cookiecutter.project_short_name }}"
version = "{{ cookiecutter.starting_version }}"
edition = "{{ cookiecutter.rust_edition }}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

authors = ["{{ cookiecutter.author_full_name }} {{ cookiecutter.author_email }}"]
{% if cookiecutter.publish_registry != "crates.io" %}
publish = "{{ cookiecutter.publish_registry }}"
{% endif %}

[dependencies]
{% if cookiecutter.crate_type == "lib" %}
{% elif cookiecutter.command_line_interface == "clap" %}clap = "*"
{% elif cookiecutter.command_line_interface == "structopt" %}structopt = "*"
{% endif %}