[package]
name = "{{ cookiecutter.project_short_name }}"
version = "{{ cookiecutter.starting_version }}"
edition = "{{ cookiecutter.rust_edition }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    "{{ cookiecutter.author_full_name }} {{ cookiecutter.author_email }}",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


publish = "{{ cookiecutter.publish_registry }}"
[dependencies]


[dev-dependencies]
