[package]
name = "{{ cookiecutter.project_short_name }}"
version = "{{ cookiecutter.starting_version }}"
edition = "{{ cookiecutter.rust_edition }}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

{% if cookiecutter.authors_name_and_email != "" %}
authors = ["{{ cookiecutter.authors_name_and_email }}"]
{% endif %}

{% if cookiecutter.publish_registry != "crates.io" %}
publish = "{{ cookiecutter.publish_registry }}"
{% endif %}

[dependencies]